--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ aiofiles==23.2.0
 httpx==0.25.1
 edge-tts==6.1.9
 pillow==10.1.0
-opencv-python==4.8.1
+opencv-python>=4.8.0
 numpy==1.24.3
 moviepy==1.0.3
 python-dotenv==1.0.0
